Add register button in the login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,5 +14,6 @@
             </div>
             <button class="button is-block is-info is-large is-fullwidth">Login</button>
         </form>
+        <button onclick="location.href = '/register';" id="myButton" class="float-left submit-button" >register</button>
     </div>
 </div>
