fix: some bug fixes

--- a/src/templates/create_leave_request.html
+++ b/src/templates/create_leave_request.html
@@ -5,6 +5,7 @@
             <div class="field">
                 <div class="control">
                     <input class="input is-large" name="reason" placeholder="Your Reason" autofocus="">
+                    <input class="input is-large" name="time" type="date" placeholder="Your Reason" autofocus="">
                 </div>
             </div>
             <button class="button is-block is-info is-large is-fullwidth">submit</button>
