--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -3,7 +3,7 @@
     <div class="box" style="width: 50%">
         <ul>
             {% for user in users %}
-                <li>{{ user.username }}</li>
+                <li>{{ user['username'] }} ({{ user['remaining_leave_days'] }} leave days remaining)</li>
             {% endfor %}
         </ul>
     </div>
