--- a/src/templates/my_leave_requests.html
+++ b/src/templates/my_leave_requests.html
@@ -13,6 +13,11 @@
                     <td>{{ request.username }}</td>
                     <td>{{ request.reason }}</td>
                     <td>{{ request.time }}</td>
+                    <td>
+                        <form action="{{ url_for('delete_leave_request', leave_id=request.id, leave_time=request.time) }}" method=post>
+                            <input type=submit value="Delete">
+                        </form>
+                    </td>
                 </tr>
             {% endfor %}
             </tbody>
